streetbot/signaler/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signaler
  namespace: streetbot
spec:
  selector:
    app: signaler
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
